anthos-bundles/nsa-cisa-k8s-v1.2/automount-serviceaccount-token-pod.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAutomountServiceAccountTokenPod
metadata:
  name: nsa-cisa-k8s-v1.2-automount-serviceaccount-token-pod
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.1"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nsa-cisa-k8s-v1.2',
        bundleVersion: '202312.1',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'Medium',
        description: 'Restricts Pods from using `automountServiceAccountToken`.',
        remediation: 'Cannot use `automountServiceAccountToken`. See "Configure Service Accounts for Pods" for more information: https://kubernetes.io/docs/tasks/configure-pod-container/configure-service-account/',
        minimumTemplateLibraryVersion: '1.11.1',
        constraintHash: 'bdbd3532a00b7fe5c24421ba7470f7285716cc7b5488e868ccc951c470ac756b'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - gmp-system
      - gatekeeper-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - gke-system
      - cert-manager
      - capi-kubeadm-bootstrap-system
      - gke-managed-metrics-server
      - gke-connect
      - capi-system
      - vm-system
      - anthos-identity-service
      - gke-gmp-system
      - apigee
      - apigee-system
      - gke-managed-cim
      - cluster-* # Anthos clusters on bare metal
