anthos-bundles/nsa-cisa-k8s-v1.2/block-all-ingress.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockAllIngress
metadata:
  name: nsa-cisa-k8s-v1.2-block-all-ingress
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/bundleVersion: "202310.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/nsa-cisa-k8s-v1.2',
        bundleVersion: '202310.0',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'Medium',
        description: 'Restricts the creation of Ingress objects.',
        remediation: 'Creating Ingress objects (`Ingress`, `Gateway`, and `Service` types of `NodePort` and `LoadBalancer`) is restricted. Remove the Ingress object or add it to the constraint allowList.  See "Ingress" for more information: https://kubernetes.io/docs/concepts/services-networking/ingress/',
        minimumTemplateLibraryVersion: '1.14.0'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - apigee
  parameters:
    allowList:
      - ^istiod-asm-[0-9]{4}-[0-9]$
      - ^metrics-server$
      - ^kubernetes$
      - ^gke-connect-monitoring$
      - ^kube-dns$
      - ^istiod$
      - ^canonical-service-controller-manager-metrics-service$
      - ^default-http-backend$
      - ^otel-collector$
      - ^gatekeeper-webhook-service$
      - ^antrea$
      - ^istio-ingress$
      # Example of adding an allowed Ingress object
      - ^allowed-service$
