anthos-bundles/nsa-cisa-k8s-v1.2/block-secrets-of-type-basic-auth.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockObjectsOfType
metadata:
  name: nsa-cisa-k8s-v1.2-block-secrets-of-type-basic-auth
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/nsa-cisa-k8s-v1.2',
        bundleVersion: '202309.0',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'High',
        description: 'Restricts the use of basic-auth type secrets.',
        remediation: 'Cannot use basic-auth type secrets. Use an alternative. See "Secrets" for more information: https://kubernetes.io/docs/concepts/configuration/secret/',
        minimumTemplateLibraryVersion: '1.14.0'
      }"
    policycontroller.gke.io/bundleVersion: "202309.0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Secret
  parameters:
    forbiddenTypes:
      - kubernetes.io/basic-auth
