anthos-bundles/nsa-cisa-k8s-v1.2/cpu-and-memory-limits-required.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: nsa-cisa-k8s-v1.2-cpu-and-memory-limits-required
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nsa-cisa-k8s-v1.2',
        bundleVersion: '202312.0',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'Low',
        description: 'All workload pods must specify `cpu` and `memory` limits.',
        remediation: 'Pods must specify `cpu` and `memory` limits. See "Resource Management for Pods and Containers" for more information: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/',
        minimumTemplateLibraryVersion: '1.12.0',
        constraintHash: '1d83ed304f85abec662bfbea92cb8cea00f55717ae21827b4963231ff2c50bda'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - ""
        kinds:
          - Pod
    excludedNamespaces:
      - kube-system
      - istio-system
      - asm-system
      - config-management-system
      - config-management-monitoring
      - resource-group-system
      - cert-manager
      - gatekeeper-system
      - gmp-system
      - gmp-public
      - gke-gmp-system
      - gke-system
      - gke-connect
      - anthos-identity-service
      - apigee
      - apigee-system
  parameters:
    limits:
      - cpu
      - memory
    exemptImages:
      - gcr.io/anthos-baremetal-release/*
      - gcr.io/gkeconnect/*
