anthos-bundles/nsa-cisa-k8s-v1.2/restrict-edit-rolebindings.yaml
# Copyright 2023 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata:
  name: nsa-cisa-k8s-v1.2-restrict-edit-rolebindings
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/bundleVersion: "202309.0"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://github.com/GoogleCloudPlatform/acm-policy-controller-library/tree/master/anthos-bundles/nsa-cisa-k8s-v1.2',
        bundleVersion: '202309.0',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'Medium',
        description: 'Restricts the use of the `edit` role.',
        remediation: 'Cannot use the edit `ClusterRole` for Role-based access control (RBAC) because it can grant restricted `pods/exec` permissions to user. Use a different role. See "Using RBAC Authorization" for more information: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#user-facing-roles',
        minimumTemplateLibraryVersion: '1.10.1'
      }"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - ClusterRoleBinding
          - RoleBinding
  parameters:
    restrictedRole:
      apiGroup: rbac.authorization.k8s.io
      kind: ClusterRole
      name: edit
    allowedSubjects: []
