anthos-bundles/nsa-cisa-k8s-v1.2/restrict-pods-exec.yaml
# Copyright 2024 Google LLC
#
# This is “Software” that is licensed under the “General Software” section of
# the Service Specific Terms (https://cloud.google.com/terms/service-terms) for
# usage in accordance with the following “Scope of Use”: This file may only be
# used on an Anthos cluster, including any associated ci/cd use. “Anthos
# cluster” is defined as “A Cluster (of any kind) registered to a fleet project
# where the Anthos API is enabled”.
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleRules
metadata:
  name: nsa-cisa-k8s-v1.2-restrict-pods-exec
  labels:
    policycontroller.gke.io/bundleName: nsa-cisa-k8s-v1.2
  annotations:
    policycontroller.gke.io/bundleVersion: "202312.1"
    policycontroller.gke.io/constraintData: |-
      "{
        bundleName: 'nsa-cisa-k8s-v1.2',
        bundleDisplayName: 'NSA CISA Kubernetes Hardening Guide v1.2',
        bundleLink: 'https://cloud.google.com/anthos-config-management/docs/how-to/using-nsa-cisa-k8s-v1.2',
        bundleVersion: '202312.1',
        bundleDescription: 'Use the NSA CISA Kubernetes Hardening Guide v1.2 policy bundle with Policy Controller to evaluate the compliance of your cluster resources against some aspects of the NSA CISA Kubernetes Hardening Guide v1.2.',
        controlNumbers: '[]',
        severity: 'Medium',
        description: 'Restricts the use of `pods/exec` in `Roles` and `ClusterRoles`.',
        remediation: 'Cannot use `pods/exec` permission in `Roles` and `ClusterRoles`. Remove all `pods/exec` rules from your `Roles` and `ClusterRoles`. See "RoleBinding and ClusterRoleBinding" for more information: https://kubernetes.io/docs/reference/access-authn-authz/rbac/#rolebinding-and-clusterrolebinding',
        minimumTemplateLibraryVersion: '1.15.2',
        constraintHash: '448c5cada721af431a7c2773662e62befb98c2ce55afd5698037ae34ff3c1e05'
      }"
spec:
  enforcementAction: dryrun
  match:
    excludedNamespaces:
      - apigee
    kinds:
      - apiGroups:
          - rbac.authorization.k8s.io
        kinds:
          - Role
          - ClusterRole
  parameters:
    disallowedRules:
      - apiGroups:
          - ""
        resources:
          - pods/exec
        verbs:
          - create
    exemptions:
      clusterRoles:
        - name: edit
        - name: system:aggregate-to-edit
        - name: admin
        - name: cluster-admin
        - name: config-management-operator
        - name: vmruntime-vmruntime-manager-role
        - name: apigee-cassandra-restore
        - name: apigee-cassandra-backup
        - name: apigee-manager-role
      roles:
        - name: agent-updater
          namespace: gke-connect
